plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
	id 'org.openjfx.javafxplugin' version '0.0.13'
	id 'application'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.openjfx:javafx-controls:17.0.10'
	implementation 'org.openjfx:javafx-fxml:17.0.10'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'commons-io:commons-io:2.11.0'
	implementation 'org.apache.httpcomponents:httpclient:4.5.13'

}
javafx {
	version = "17.0.10"
	modules = [ 'javafx.controls', 'javafx.fxml' ]
}
application {
	applicationDefaultJvmArgs = [
			'--module-path', '/Users/nataliajanda/Documents/javafx-sdk-17.0.11/lib',
			'--add-modules', 'javafx.controls,javafx.fxml'
	]
}

tasks.named('test') {
	useJUnitPlatform()
}

